[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sns-media-list"
version = "0.1.0"
description = "Self-hosted public social media media-list service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.2",
    "httpx==0.28.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "starlette==1.3.1",
    "uvicorn[standard]==0.35.0",
    "gallery-dl==1.32.7",
]

[project.optional-dependencies]
dev = [
    "mypy==1.17.1",
    "pip-audit==2.10.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
    "playwright==1.54.0",
    "ruff==0.12.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["sns_media_list"]
